MonetDB/src/mal/Tests/tst102.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2002, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## the calls are wrong, they violate the type constraint
#command + (L:any::1, R:any::1):any::1 = addIntInt
!ERROR: address of 'addIntInt' not found
command Admin.+(L:any::1,R:any::1):any::1 = addIntInt;	#0 polymorphic:(+:any::1)<-(L:any::1)(R:any::1)
#
#a:=1+"hello";
#b:=3.5+1;
#
function Admin.main():int;	#0:(main:int)
	a := +(1,"hello");	#1 unknown:(a:any)<-($2:int)($3:str)
	b := calc.+(3.5,1);	#2:(b:flt)<-($5:flt)($2:int)
end function;	#3:
!ERROR: '+' undefined in Admin.main[1]
!ERROR: MALexception:Admin.main[1]:Instruction type not fixed

>